# schema/openapi.yml
@@ -17,6 +17,7 @@ paths:
   /users:
     get:
       summary: Get all users
+      operationId: listUsers
       responses:
         200:
           description: A list of users
@@ -28,6 +29,7 @@ paths:
                   $ref: "#/components/schemas/User"
     post:
       summary: Create a new user
+      operationId: createUser
       requestBody:
         required: true
         content:
@@ -44,6 +46,7 @@ paths:
   /users/{userId}:
     get:
       summary: Get a user
+      operationId: showUserById
       parameters:
         - in: path
           name: userId
@@ -60,6 +63,7 @@ paths:
                 $ref: "#/components/schemas/User"
     put:
       summary: Update a user
+      operationId: updateUserById
       parameters:
         - in: path
           name: userId
@@ -82,6 +86,7 @@ paths:
                 $ref: "#/components/schemas/User"
     delete:
       summary: Delete a user
+      operationId: deleteUserById
       parameters:
         - in: path
           name: userId
